2005-10-24  Sven Herzberg  <herzi@gnome-de.org>

	* doc/tmpl/gundo.sgml: API update
	* gundo-ui/gundo-tool-undo.c: got rid of the sequence specific code
	* gundo/gundo-history.c: added undo
	* gundo/gundo-history.h: added undo
	* gundo/gundo-sequence.c: implement undo from the history
	* gundo/gundo-sequence.h: remove undo
	* test/tundo.c: API update

2005-10-24  Sven Herzberg  <herzi@gnome-de.org>

	* gundo-ui/gundo-tool-undo.c: use the view actions to make the widget
	(in)sensitive now; notify correctly about a history change
	* gundo-ui/gundo-ui.c: use the gundo history now in the connection,
	listen to the new signals now
	* gundo/gundo-history-view.c: added the (un)register calls, added
	signal handling for the can-undo stuff
	* gundo/gundo-history-view.h: added the (un)register calls
	* gundo/gundo-history.c: added the properties
	* gundo/gundo-history.h: added the properties
	* gundo/gundo-sequence.c: added the can-undo and can-redo properties;
	removed the old signal handling code
	* gundo/gundo-sequence.h: made the class simpler

2005-10-24  Sven Herzberg  <herzi@gnome-de.org>

	* demo/sketch-window.c: use _set_history for the tool item now
	* gundo/Makefile.am: added the history view
	* gundo/gobject-helpers.h: added an extra way to specify an interface
	* gundo/gundo.h: include the history view too
	* gundo/gundo-history-view.c,
	* gundo/gundo-history-view.h: added an interface for the view
	component of the MVC
	* gundo-ui/gundo-popup-model.h: added an lgpl banner
	* gundo-ui/gundo-tool-undo.c: implement the hisory view, 
	* gundo-ui/gundo-tool-undo.h: renamed _connect to _set_history
	* test/tundo.c: added lgpl banner

2005-10-24  Sven Herzberg  <herzi@gnome-de.org>

	* autogen.sh: include the macros folder for aclocal
	* configure.in: ensure the macros folder is available, use the new
	cflags handling stuff
	* demo/sketch-window.c: added lgpl header, fix the argument for the
	set_sensitive calls
	* demo/sketch-window.h: added a missing prototype