@@ -3,13 +3,28 @@
                "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd">
 <book id="index" xmlns:xi="http://www.w3.org/2003/XInclude">
   <bookinfo>
-    <title>[Insert name here] Reference Manual</title>
+    <title>Gundo Reference Manual</title>
   </bookinfo>
 
-  <chapter>
-    <title>[Insert title here]</title>
-    <xi:include href="xml/gundo.xml"/>
-    <xi:include href="xml/gundo-tool-undo.xml"/>
+  <chapter id="gundo">
+    <title>Gundo</title>
+    <xi:include href="xml/gundohistory.xml"/>
+    <xi:include href="xml/gundohistoryview.xml"/>
+    <xi:include href="xml/gundosequence.xml"/>
+    <xi:include href="xml/gundotoolundo.xml"/>
+  </chapter>
+
+  <chapter id="gundoui">
+    <title>Gundo UI</title>
     <xi:include href="xml/gundo-ui.xml"/>
   </chapter>
+  
+ <chapter id="objecttree">
+    <title>Object Hierarchy</title>
+    <xi:include href="xml/tree_index.sgml"/>
+  </chapter>
+
+  <index id="api-index">
+    <title>API Index</title>
+  </index>
 </book>
