@@ -1,7 +1,10 @@
-#include <gundo-ui.h>
+#include <gundo.h>
 
 gundo_history_get_type
+gundo_history_view_get_type
 gundo_sequence_get_type
+
+#include <gundo-ui.h>
 
 gundo_tool_undo_get_type
 
